[package]
name = "cuel"
version = "0.1.0"
authors = ["Ada Rosa <adrosa@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

tokio = { version = "1", features = ["macros", "full"] }

subprocess = "0.2"

bollard = "0.11" # docker

contract = { path = "contract" }

jsonrpc-core = { version = "18.0.0", path = "../../core" }
jsonrpc-pubsub = { version = "18.0.0", path = "../" }
jsonrpc-ws-server = { version = "18.0.0", path = "../../ws" }
jsonrpc-ipc-server = { version = "18.0.0", path = "../../ipc" }

reqwest = "*"

anyhow = "1.0"
thiserror = "1.0"
structopt = "0.3.23"