[package]
name = "contract"
version = "0.1.0"
authors = ["Ada Rosa <adrosa@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5" # Rust gRPC implementation
prost = "0.8" # Rust Protocol Buffers implementation
prost-types = "0.8" # Contains definitions of Protocol Buffers well-known types

[build-dependencies]
tonic-build = "0.5" # build protobuff